--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 17 2025 14:59:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 17 2025 15:42:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="672875117ea78261cb1272dc" data-wf-site="672875117ea78261cb1272dd">
 <head>
   <meta charset="utf-8">
@@ -863,7 +863,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-slide">
+              <div class="slide-2 w-slide">
                 <div class="w-layout-grid slider-grid">
                   <div class="slider-image"><img sizes="(max-width: 1080px) 100vw, 1080px" srcset="images/verge-supply-p-500.png 500w, images/verge-supply-p-800.png 800w, images/verge-supply.png 1080w" alt="" src="images/verge-supply.png" loading="lazy" class="image-cover-2"></div>
                   <div class="slider-card">
@@ -877,7 +877,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-slide">
+              <div class="slide-2 w-slide">
                 <div class="w-layout-grid slider-grid">
                   <div class="slider-image"><img sizes="(max-width: 1080px) 100vw, 1080px" srcset="images/viro-tech-p-500.png 500w, images/viro-tech-p-800.png 800w, images/viro-tech.png 1080w" alt="" src="images/viro-tech.png" loading="lazy" class="image-cover-2"></div>
                   <div class="slider-card">
