--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Apr 01 2025 20:27:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 06 2025 14:33:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="672875117ea78261cb1272dc" data-wf-site="672875117ea78261cb1272dd">
 <head>
   <meta charset="utf-8">
@@ -483,60 +483,29 @@
             <div class="w-layout-grid grid-three-columns annuallly">
               <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141a87-cb1272dc" class="padding-top-80px">
                 <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141a88-cb1272dc" class="card-pricing">
-                  <div class="flex-horizontal start-top">
-                    <div class="text-single-200 medium"><em>High-converting &amp; built to last</em></div>
-                    <h3 class="main-pricing-title">🚀 Landing Page</h3>
+                  <div class="flex-horizontal start-top diff">
+                    <h3 class="main-pricing-title">Unlimited Revisions.</h3>
+                    <h3 class="main-pricing-title">Pause or Cancel Anytime.</h3>
+                    <h3 class="main-pricing-title">One Monthly Price.</h3>
                   </div>
-                  <div class="mg-top-18px mg-bottom-32px">
-                    <div class="pricing-2">$1,499<span class="text-single-300 medium text-color-600">/One-time</span></div>
+                  <div class="mg-top-18px mg-bottom-32px include diff">
+                    <div class="text-single-200 bold text-color-neutral-800">Pay. Plug. Play.</div>
+                    <div class="text-single-200 bold text-color-neutral-800 opacity">We kick off instantly and work on whatever you need — brand, web, slides, campaigns, you name it.Unlimited revisions. Pause anytime. One flat monthly rate.</div>
                   </div>
-                  <div class="mg-top-18px mg-bottom-32px include">
-                    <div class="text-single-200 bold text-color-neutral-800">What’s included</div>
-                    <ul role="list" class="list-pricing w-list-unstyled">
-                      <li class="list-item-pricing">
-                        <div class="icon-check w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--carbon" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 32 32">
-                            <path fill="currentColor" d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2m-2 19.59l-5-5L10.59 15L14 18.41L21.41 11l1.596 1.586Z"></path>
-                            <path fill="none" d="m14 21.591l-5-5L10.591 15L14 18.409L21.41 11l1.595 1.585z"></path>
-                          </svg></div>
-                        <div class="text-single-200 text-color-neutral-800">Fully custom design</div>
-                      </li>
-                      <li class="list-item-pricing">
-                        <div class="icon-check w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--carbon" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 32 32">
-                            <path fill="currentColor" d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2m-2 19.59l-5-5L10.59 15L14 18.41L21.41 11l1.596 1.586Z"></path>
-                            <path fill="none" d="m14 21.591l-5-5L10.591 15L14 18.409L21.41 11l1.595 1.585z"></path>
-                          </svg></div>
-                        <div class="text-single-200 text-color-neutral-800">Fast delivery</div>
-                      </li>
-                      <li class="list-item-pricing">
-                        <div class="icon-check w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--carbon" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 32 32">
-                            <path fill="currentColor" d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2m-2 19.59l-5-5L10.59 15L14 18.41L21.41 11l1.596 1.586Z"></path>
-                            <path fill="none" d="m14 21.591l-5-5L10.591 15L14 18.409L21.41 11l1.595 1.585z"></path>
-                          </svg></div>
-                        <div class="text-single-200 text-color-neutral-800">Design &amp; conversion focus</div>
-                      </li>
-                      <li class="list-item-pricing">
-                        <div class="icon-check w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--carbon" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 32 32">
-                            <path fill="currentColor" d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2m-2 19.59l-5-5L10.59 15L14 18.41L21.41 11l1.596 1.586Z"></path>
-                            <path fill="none" d="m14 21.591l-5-5L10.591 15L14 18.409L21.41 11l1.595 1.585z"></path>
-                          </svg></div>
-                        <div class="text-single-200 text-color-neutral-800">Unlimited revisions </div>
-                      </li>
-                      <li class="list-item-pricing">
-                        <div class="icon-check w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--carbon" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 32 32">
-                            <path fill="currentColor" d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2m-2 19.59l-5-5L10.59 15L14 18.41L21.41 11l1.596 1.586Z"></path>
-                            <path fill="none" d="m14 21.591l-5-5L10.591 15L14 18.409L21.41 11l1.595 1.585z"></path>
-                          </svg></div>
-                        <div class="text-single-200 text-color-neutral-800">SEO optimized</div>
-                      </li>
-                    </ul>
-                    <div class="text-single-200 bold text-color-neutral-800 opacity">Pause or cancel anytime</div>
+                  <div class="mg-top-18px mg-bottom-32px include diff">
+                    <div class="text-single-200 bold text-color-neutral-800">Free design audit.</div>
+                    <div class="text-single-200 bold text-color-neutral-800 opacity">Not sure what you need yet? We’ll review your brand, website, or product — and send back honest, actionable feedback. No strings, no pressure.</div>
+                  </div>
+                  <div class="mg-top-18px mg-bottom-32px include diff">
+                    <div class="text-single-200 bold text-color-neutral-800">Try it for a week. Keep the work.</div>
+                    <div class="text-single-200 bold text-color-neutral-800 opacity">Start your first week, get real design delivered — then decide if we’re the right fit. Get <strong>70% of your money back</strong>, no questions asked. No contracts. No pressure. Just high-impact work from day one.</div>
                   </div>
                   <a data-w-id="0b1c5c1a-e058-8e6a-a1c1-05c902141ab2" style="-webkit-transform:translate3d(0, 70%, -5.625rem) scale3d(1, 1, 1) rotateX(-92deg) rotateY(0) rotateZ(0) skew(3deg, -12deg);-moz-transform:translate3d(0, 70%, -5.625rem) scale3d(1, 1, 1) rotateX(-92deg) rotateY(0) rotateZ(0) skew(3deg, -12deg);-ms-transform:translate3d(0, 70%, -5.625rem) scale3d(1, 1, 1) rotateX(-92deg) rotateY(0) rotateZ(0) skew(3deg, -12deg);transform:translate3d(0, 70%, -5.625rem) scale3d(1, 1, 1) rotateX(-92deg) rotateY(0) rotateZ(0) skew(3deg, -12deg);opacity:0;transform-style:preserve-3d" href="https://calendly.com/talk-3flow/30min" target="_blank" class="button-block-33 w-inline-block">
                     <div class="button-wrap-33">
                       <div style="-webkit-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="button-text-33-icon-logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="100%" height="100%" preserveaspectratio="xMidYMid meet" viewbox="0 0 24 24">
                           <path fill="currentColor" d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"></path>
                         </svg></div>
-                      <div style="-webkit-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="button-text-33">Book a call</div>
+                      <div style="-webkit-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0.75rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="button-text-33">Free consultation</div>
                       <div style="-webkit-transform:translate3d(2rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(2rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(2rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(2rem, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="button-text-33-icon-arrow w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewbox="0 0 448 512"><!-- ! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.  -->
                           <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" fill="currentColor"></path>
                         </svg></div>
@@ -548,9 +517,9 @@
                 <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141ab9-cb1272dc" class="card-pricing popular">
                   <div class="flex-horizontal start-top dark">
                     <div class="text-single-200 medium light"><em>Unlimited design &amp; revisions</em></div>
-                    <h3 class="main-pricing-title white pop"><strong>🔥 Subscription</strong></h3>
+                    <h3 class="main-pricing-title white pop"><strong>🔥 Design Subscription</strong></h3>
                   </div>
-                  <div class="pricing-2 color-white">$2,499<span class="text-single-300 medium text-color-600 white">/Monthly</span></div>
+                  <div class="pricing-2 color-white">$4,999<span class="text-single-300 medium text-color-600 white">/Monthly</span></div>
                   <div class="mg-top-18px mg-bottom-32px include white">
                     <div class="text-single-200 bold text-color-neutral-800 white">What’s included</div>
                     <ul role="list" class="list-pricing w-list-unstyled">
@@ -605,7 +574,7 @@
                   </a>
                 </div>
               </div>
-              <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141ae5-cb1272dc" class="padding-top-80px">
+              <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141ae5-cb1272dc" class="padding-top-80px hide">
                 <div id="w-node-_0b1c5c1a-e058-8e6a-a1c1-05c902141ae6-cb1272dc" class="card-pricing">
                   <div class="flex-horizontal start-top">
                     <div class="text-single-200 medium"><em>A premium brand identity that sets you apart.</em></div>
