--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 12 2025 15:03:48 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 05 2025 10:17:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67d7887e0a40e31de35a3458" data-wf-site="672875117ea78261cb1272dd">
 <head>
   <meta charset="utf-8">
@@ -27,5 +27,28 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=672875117ea78261cb1272dd" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const secondHero = document.getElementById("Second-hero");
+    const home = document.getElementById("Home");
+    let justTeleported = false;
+    window.addEventListener("scroll", () => {
+      if (justTeleported) return;
+      const secondHeroRect = secondHero.getBoundingClientRect();
+      const triggerPoint = secondHeroRect.bottom <= window.innerHeight + 5;
+      if (triggerPoint) {
+        justTeleported = true;
+        // Get vertical offset of #Home from top of document
+        const homeOffset = home.getBoundingClientRect().top + window.scrollY;
+        // Instantly jump to it
+        window.scrollTo({ top: homeOffset, behavior: "auto" });
+        // Small cooldown so it doesn't instantly retrigger
+        setTimeout(() => {
+          justTeleported = false;
+        }, 100);
+      }
+    });
+  });
+</script>
 </body>
 </html>
